--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.5",
-    "react": "18.2.0",
+    "next": "^13.4.5",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "react-tooltip": "^5.14.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
